@@ -2,6 +2,7 @@
   - added ActiveHash::Base.has_many, which works with ActiveRecord or ActiveHash classes (thanks to baldwindavid)
   - added ActiveHash::Base.belongs_to, which works with ActiveRecord or ActiveHash classes (thanks to baldwindavid)
   - added .delete_all method that clears the in-memory array
+  - added support for Hash-style yaml (think, Rails fixtures)
 
 2009-10-12
   - auto-assign fields after calling data= instead of after calling .all
